Serveur/P2_S4_Velociraptor/P2_S4_Velociraptor.sdk/.metadata/.plugins/org.eclipse.cdt.ui/P2_S4_Server.build.log
18:54:02 **** Auto Build of configuration Debug for project P2_S4_Server ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/http_server/http_response.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/http_server/http_response.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../P2_S4_Server_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/http_server/http_response.d" -MT"src/http_server/http_response.o" -o "src/http_server/http_response.o" "../src/http_server/http_response.c"
../src/http_server/http_response.c: In function 'do_http_get':
../src/http_server/http_response.c:133:6: warning: implicit declaration of function 'is_cmd_fpga'; did you mean 'is_cmd_led'? [-Wimplicit-function-declaration]
  if (is_cmd_fpga(req)) {
      ^~~~~~~~~~~
      is_cmd_led
../src/http_server/http_response.c:137:12: error: 'sw_buf' undeclared (first use in this function); did you mean 'setbuf'?
    sprintf(sw_buf, "{\"switches\": []");
            ^~~~~~
            setbuf
../src/http_server/http_response.c:137:12: note: each undeclared identifier is reported only once for each function it appears in
../src/http_server/http_response.c:141:4: error: 'sw_len' undeclared (first use in this function); did you mean 'strlen'?
    sw_len = strlen(sw_buf);
    ^~~~~~
    strlen
../src/http_server/http_response.c:143:4: error: 'len' undeclared (first use in this function); did you mean 'hlen'?
    len = generate_http_header(buf, "js", sw_len);
    ^~~
    hlen
../src/http_server/http_response.c:143:31: warning: pointer targets in passing argument 1 of 'generate_http_header' differ in signedness [-Wpointer-sign]
    len = generate_http_header(buf, "js", sw_len);
                               ^~~
../src/http_server/http_response.c:48:5: note: expected 'char *' but argument is of type 'unsigned char *'
 int generate_http_header(char *buf, char *fext, int fsize);
     ^~~~~~~~~~~~~~~~~~~~
../src/http_server/http_response.c:145:11: warning: pointer targets in passing argument 1 of 'strcat' differ in signedness [-Wpointer-sign]
    strcat(buf, sw_buf);
           ^~~
In file included from c:\xilinx\sdk\2018.2\gnu\aarch32\nt\gcc-arm-none-eabi\arm-none-eabi\libc\usr\include\string.h:10:0,
                 from ../src/http_server/http_response.c:19:
c:\xilinx\sdk\2018.2\gnu\aarch32\nt\gcc-arm-none-eabi\arm-none-eabi\libc\usr\include\string.h:26:8: note: expected 'char * restrict' but argument is of type 'unsigned char *'
 char  *_EXFUN(strcat,(char *__restrict, const char *__restrict));
        ^
make: *** [src/http_server/http_response.o] Erreur 1

18:54:02 Build Finished (took 619ms)

